--- a/html/abbas.html
+++ b/html/abbas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stlyesheet" href="../style/abbas.css" />
-    <title>Document</title>
+    <title>abbas</title>
   </head>
   <body></body>
 </html>
