--- a/html/ali.html
+++ b/html/ali.html
@@ -4,7 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stlyesheet" href="../style/ali.css" />
-    <title>Document</title>
+    <title>صفحه شخصی علی احمدی </title>
+    <style>
+  ul {
+    list-style: none;
+  }
+  .sidebar{
+    background-color: blue;
+    height: 100%;
+    width: 30%;
+    float: right;
+  }
+  . sidebar ul li{
+    margin: 10px;
+    padding: 10px;
+  }
+  .sidebar ul li a{
+    color: white;
+    font-size: 55px;
+    background-color: blue;
+
+  }
+  .content{
+    float: left;
+    width: 70%;
+    background-color: beige;
+  }
+
+    </style>
   </head>
-  <body></body>
+  <body>
+
+<main>
+  <section class="sidebar"> 
+    <ul>
+      <li> <a href="ali.html"> ALi Ahmadi</a></li>
+      <li> <a href="ali.html"> ALi Ahmadi</a></li>
+      <li> <a href="ali.html"> ALi Ahmadi</a></li>
+      <li> <a href="ali.html"> ALi Ahmadi</a></li>
+      <li> <a href="ali.html"> ALi Ahmadi</a></li>
+    </ul>
+  </section>
+  <section class="content">
+kkljlkj
+  </section>
+</main>
+
+  </body>
 </html>
