--- a/html/ali.html
+++ b/html/ali.html
@@ -166,6 +166,10 @@ border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
   display: inline-block;
   width: 49%;
 }
+.certificate .timeline1 ul li :hover{
+  background-color: aliceblue;
+  color: #0abcff;
+}
 .certificate .timeline1 ul li h1{
   border-bottom: 1px solid #e8dfec;
 }
