--- a/index.html
+++ b/index.html
@@ -3,8 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stlyesheet" href="./style/main.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Home</title>
   </head>
-  <body></body>
+  <body>
+    <footer>
+      <div class="footer-content">
+        <div class="logo-title">
+          <img src="./img/logo.svg" alt="logo">
+          <p>Building Web Wonders with Mana</p>
+        </div>
+        <div class="social-links">
+          <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://twitter.com/yourusername" target="_blank" aria-label="Twitter">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://www.instagram.com/yourusername" target="_blank" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+      </div>
+    </footer>
+  </body>
 </html>
