--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="copyright">
-        <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+        <p>&copy; 2024 Your Company Mana All rights reserved.</p>
       </div>
     </footer>
   </body>
