--- a/html/abbas.html
+++ b/html/abbas.html
@@ -106,7 +106,7 @@
       <footer class="site-footer">
         <div class="footer-content">
           <div class="copyright">
-            <p>&copy; 2024 نام شما. تمامی حقوق محفوظ است.</p>
+            <p>&copy; 2024 Your Company Mana All rights reserved.</p>
           </div>
           <div class="social-links">
             <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
