--- a/html/abbas.html
+++ b/html/abbas.html
@@ -9,12 +9,40 @@
   </head>
   <body>
     <header>
-      <!--منتظر علی میمانیم علی لطفا سریع تر این بخش را برسان -->
+      <div class="main-header" id="main-bio">
+        <div class="container">
+            <section class="menu" >
+              <nav class="nav-mine">
+                <ul>
+                  <li> <a href="../index.html">Main</a></li>
+                  <li><a href="#about-me"> About me </a></li>
+                  <li><a href="#skills"> Skills </a></li>
+                  <li><a href="#portfolio"> Portfolio </a></li>
+                  <li><a href="#our-team"> Our team </a></li>
+                   <li><a href="#contact"> Contact </a></li>
+                </ul>
+               </nav>
+            </section>
+            <section class="logo">
+              <ul >
+                <li style="list-style-type: none;"><img src="../img/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px;"></li>
+              </ul>
+            </section>
+        </div>
+        <div class="small-text">
+          <p class="text-about"><b>Abbas</b></p>
+          <p class="text-about">A geek who likes to travel everywhere with technology</p>
+          <a href="#about-me" class="link-page">Read More...</a>
+        </div>
+      </div> 
+    </div>
+     <div style="clear:both; height:0.1px;">
+</div>
     </header>
     <main>
-      <div>
+      <div class="test">
       <h1>Abuot me</h1>
-      <p>My name is Abbas, I am 17 years old and during these past years I tried to be useful to the society and I am trying to be a good person. If you need help in the field of technology, I am at my service. Email:<a href=mailto:bmnswry27@gmail.com>bmnswry27@gmail.com</a></p>
+      <p>My name is Abbas, I am 17 years old and during these past years I tried to be useful to the society and I am trying to be a good person. If you need help in the field of technology, I am at my service.</p>
       </div>
       <section class="skils">
         <h2>skils</h2>
@@ -51,7 +79,7 @@
       </div>
       </section>
       <section class="gallery">
-        <h2><!-- نمیدونم علی قرار بگه اسمش رو --></h2>
+        <h2>Portfolio</h2>
         <div class="gallery-grid">
           <div class="gallery-item">
             <img src="../img/abbas/afra-bot.jpg" alt="afra-bot">
@@ -66,7 +94,7 @@
             <p>hackintosh</p>
         </div>
         <div class="gallery-item">
-            <img src="../img/abbas/nojavan.jpeg" alt="nojavan">
+            <img src="../img/abbas/nojavan.jpeg" alt="nojavan" style="object-position: 0rem -4rem;">
             <p>nojavan</p>
         </div>
       </section>
