--- a/html/abbas.html
+++ b/html/abbas.html
@@ -14,7 +14,7 @@
             <section class="menu" >
               <nav class="nav-mine">
                 <ul>
-                  <li> <a href="../index.html">Main</a></li>
+                  <li> <a href="../index.html">Home</a></li>
                   <li><a href="#about-me"> About me </a></li>
                   <li><a href="#skills"> Skills </a></li>
                   <li><a href="#portfolio"> Portfolio </a></li>
@@ -41,7 +41,7 @@
     </header>
     <main>
       <div class="test">
-      <h1>Abuot me</h1>
+      <h1>About Me</h1>
       <p>My name is Abbas, I am 17 years old and during these past years I tried to be useful to the society and I am trying to be a good person. If you need help in the field of technology, I am at my service.</p>
       </div>
       <section class="skils">
