--- a/html/abbas.html
+++ b/html/abbas.html
@@ -126,7 +126,8 @@
       </section>
       <section class="center-image">
         <a href="#">
-          <img src="../img/abbas/abbas-kot.jpg" alt="عباس در عروسی داییش :)" class="img-link">
+          <img src="../img/negin/negin.JPG" alt="نگین در دیوار مربعی" class="img-link">
+          <img src="../img/ali/img.jpg" alt="علی در مزرعه گیر کرده است" class="img-link">
         </a>
         <a href="#"></a>
         <a href="#"></a>
@@ -134,7 +135,7 @@
       <footer class="site-footer">
         <div class="footer-content">
           <div class="copyright">
-            <p>&copy; 2024 Your Company Mana All rights reserved.</p>
+            <p>&copy; 2024 Your Company MANA All rights reserved.</p>
           </div>
           <div class="social-links">
             <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
