--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="footer-content">
         <div class="logo-title">
           <img src="./img/logo.svg" alt="logo">
-          <p>Building Web Wonders with Mana</p>
+          <p>Building Web Wonders with MANA</p>
         </div>
         <div class="social-links">
           <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="copyright">
-        <p>&copy; 2024 Your Company Mana All rights reserved.</p>
+        <p>&copy; 2024 Your Company MANA All rights reserved.</p>
       </div>
     </footer>
   </body>
