--- a/html/ali.html
+++ b/html/ali.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="../style/ali.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <title>صفحه شخصی علی احمدی </title>
+  <title> Ali's Blog </title>
   </head>
   <body>
         <div class="main-header" id="main-bio">
@@ -13,7 +13,7 @@
               <section class="menu" >
                 <nav class="nav-mine">
                   <ul>
-                    <li> <a href="../index.html">Main</a></li>
+                    <li> <a href="../index.html"> Home </a></li>
                     <li><a href="#about-me"> About me </a></li>
                     <li><a href="#skills"> Skills </a></li>
                     <li><a href="#portfolio"> Portfolio </a></li>
