--- a/html/abbas.html
+++ b/html/abbas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style/abbas.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>abbas</title>
+    <title> Abbas's Blog </title>
   </head>
   <body>
     <header>
@@ -14,12 +14,12 @@
             <section class="menu" >
               <nav class="nav-mine">
                 <ul>
-                  <li> <a href="../index.html">Home</a></li>
+                  <li><a href="../index.html">Home</a></li>
                   <li><a href="#about-me"> About me </a></li>
                   <li><a href="#skills"> Skills </a></li>
                   <li><a href="#portfolio"> Portfolio </a></li>
                   <li><a href="#our-team"> Our team </a></li>
-                   <li><a href="#contact"> Contact </a></li>
+                  <li><a href="#contact"> Contact </a></li>
                 </ul>
                </nav>
             </section>
@@ -30,9 +30,9 @@
             </section>
         </div>
         <div class="small-text">
-          <p class="text-about"><b>Abbas</b></p>
-          <p class="text-about">A geek who likes to travel everywhere with technology</p>
-          <a href="#about-me" class="link-page">Read More...</a>
+          <p class="text-about"><b> Abbas's Blog </b></p>
+          <p class="text-about"> A geek who likes to travel everywhere with technology </p>
+          <a href="#about-me" class="link-page"> Read More...</a>
         </div>
       </div> 
     </div>
