--- a/html/ali.html
+++ b/html/ali.html
@@ -29,7 +29,7 @@
               </section>
           </div>
           <div class="small-text">
-            <p class="text-about"> This is <span> Ali</span></p>
+            <p class="text-about"> Ali's Blog </p>
             <p class="text-about"> I Am a Web designer And Network Manager</p>
             <a href="#about-me" class="link-page"> Read More...</a>
           </div>
