--- a/html/negin.html
+++ b/html/negin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stlyesheet" href="../style/negin.css" />
+    <link rel="stylesheet" href="../style/negin.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title> Negin's Blog </title>
   </head>
@@ -25,7 +25,7 @@
             </section>
             <section class="logo">
               <ul >
-                <li style="list-style-type: none;"><img src="../img/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px;"></li>
+                <li style="list-style-type: none;"><img src="../img/home/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px;"></li>
               </ul>
             </section>
         </div>
