--- a/html/ali.html
+++ b/html/ali.html
@@ -24,7 +24,7 @@
               </section>
               <section class="logo">
                 <ul >
-                  <li> <img src="../img/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px"></li>
+                  <li> <img src="../img/home/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px"></li>
                 </ul>
               </section>
           </div>
@@ -37,7 +37,7 @@
       </div>
        <div style="clear:both; height:0.1px;"></div>
       <div class="main" id="about-me" ">
- <h1 >About Me</h1>
+ <h1> About Me </h1>
       <br> 
          <div class="left" > 
               <img src="../img/ali/img.jpg" class="image" alt="ali ahmadi" style="display: inline-block">
@@ -47,17 +47,15 @@
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum </p>
        </div>
      </div>
-<div class="bg" style="background-image:url(../img/logo.png); ">
- </div>
-<div class="main" id="skills"><h1>  My Skills</h1>
+
+<div class="main" id="skills"> 
+  <h2> Skills </h2>
   <div class="skills-content">
   <br>
-      <p> here you can see my skills... </p>
       <section class="skils">
-        <h2>skils</h2>
         <div class="skils-contenr">
           <div class="skils-item">
-            <h3>programming languages</h3>
+            <h3> programming languages </h3>
             <ul>
               <li>C#</li>
               <li>JavaScript</li>
@@ -65,25 +63,25 @@
             </ul>
           </div>
           <div class="skils-item">
-            <h3>Conception</h3>
+            <h3> Conception </h3>
             <ul>
               <li>Adobe pothoshap</li>
               <li>Adobe Anime studio</li>
             </ul>
         </div>
         <div class="skils-item">
-          <h3>Networking</h3>
+          <h3> Networking </h3>
           <ul>
-            <li>CCNA - Switching & Routing</li>
-            <li>Security Networking</li>
-               <li>Network Security monitoring</li>
+            <li> CCNA - Switching & Routing </li>
+            <li> Security Networking </li>
+               <li> Network Security monitoring </li>
           </ul>
         </div>
         <div class="skils-item">
-          <h3>languages</h3>
+          <h3> Languages </h3>
           <ul>
-            <li>Persian</li>
-            <li>English</li>
+            <li> Persian </li>
+            <li> English </li>
           </ul>
         </div>
       </div>
@@ -92,54 +90,47 @@
 </div>
 
 <div class="main" id="portfolio">
-<h1>  Portfolio </h1>
+<h2>  Portfolio </h2>
 <br>
-<p> here you can see my portfolio <p>
-               <section class="gallery">
+      <section class="gallery">
         <div class="gallery-grid">
           <div class="gallery-item">
-            <img src="../img/b2.jpg" alt="afra-bot">
-            <p>bot afra shop</p>
+            <img src="../img/ali/b2.jpg" alt="afra-bot">
+            <p></p>
           </div>
           <div class="gallery-item">
-            <img src="../img/b1.jpg" alt="abbas-code">
-            <p>code me</p>
+            <img src="../img/ali/b1.jpg" alt="abbas-code">
+            <p></p>
         </div>
         <div class="gallery-item">
-            <img src="../img/s.jpg" alt="hacntosh">
-            <p>hackintosh</p>
+            <img src="../img/ali/s.jpg" alt="hacntosh">
+            <p>h</p>
         </div>
         <div class="gallery-item">
-            <img src="../img/h.png" alt="nojavan">
-            <p>nojavan</p>
+            <img src="../img/ali/h.png" alt="nojavan">
+            <p></p>
         </div>
       </section>
 </div>
 
-
-<div class="bg" style='background-image: url(../img/logo.png);' >
- </div>
 <div class="main" id="our-team">
-<h1>  Our team </h1>
+<h2>  Our Team </h2>
 <br>
-<p> Here You Can Find Other Members Of <a href="./index.html"> MANA Team <a>. <p>
   <div class="our-team-content">
   <div class="box2">
-    <a href="./abbas.html"><img src="../img/abbas/abbas-kot.jpg" alt="asd"> </a>
+    <a href="./abbas.html"><img src="../img/abbas/abbas-kot.jpg" alt="abbas img"> </a>
 </div>
 
 <div class="box2">
-   <a href="./negin.html"><img src="../img/logo.png" alt="asd"></a>
+   <a href="./negin.html"><img src="../img/home/logo.png" alt="negin img"></a>
 </div>
 </div>
    </div>    
 
 <div class="main" id="contact">
-<h1>  Contact Me</h1>
+<h2>  Contact Me </h2>
 <br>
-<p> here you can send me messages. <p>
 <section id="contact" class="contact-form">
-        <h2>contact me</h2>
         <form action="#" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
@@ -151,7 +142,7 @@
             <input type="email" id="email" name="email" required>
           </div>
           <div class="form-group">
-            <label for="subject">sobject</label>
+            <label for="subject">subject</label>
             <input type="text" id="subject" name="subject" required>
           </div>
           <div class="form-group">
@@ -166,7 +157,7 @@
       <footer class="site-footer">
         <div class="footer-content">
           <div class="copyright">
-            <p>&copy; 2024 All Site Rights Are Reserved For <a href="ali.html"> Ali Alhmadi </a>.</p>
+            <p>&copy; 2024 All Site Rights Are Reserved For <a href="ali.html"> Ali Ahmadi </a>.</p>
           </div>
           <div class="social-links">
             <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
