--- a/index.html
+++ b/index.html
@@ -8,10 +8,55 @@
     <title>Home</title>
   </head>
   <body>
+    <div class="main">
+      <div class="home">
+         <!------------header-------------->
+                <div class="header">
+                   <img src="./img/home/main-header.jpg">
+                </div>
+               <div class="pic">
+<div class="team">
+<h1> <u>  MANA TEAM <u> </h1>
+<br>
+<p> Click On Our Pics To See Our Personal blogs. <p>
+<br><br><br>
+
+            <section class="gallery">
+     <div class="gallery-grid">
+            <div class="gallery-item">
+           <a href="./index.html">
+         <img src="./img/home/logo.png" alt="Ali">
+         <p>HOME</p>
+        </a>
+     </div>
+       <div class="gallery-item">
+           <a href="./html/abbas.html">
+          <img src="./img/abbas/abbas-kot.jpg" alt="abbas">
+         <p>ABBAS</p>
+           </a>
+       </div>
+       <div class="gallery-item">
+           <a href="./html/ali.html">
+         <img src="./img/ali/img.jpg" alt="Ali">
+         <p>ALI</p>
+        </a>
+     </div>
+     <div class="gallery-item">
+         <a href="./html/negin.html">
+         <img src="./img/negin/negin.JPG" alt="hacntosh">
+         <p>NEGIN</p>
+         </div>
+     </div>
+     </div>
+   </section>
+</div>
+     </div>
+       </div>
+ </div>
     <footer>
       <div class="footer-content">
         <div class="logo-title">
-          <img src="./img/logo.svg" alt="logo">
+          <img src="./img/home/logo.svg" alt="logo">
           <p>Building Web Wonders with MANA</p>
         </div>
         <div class="social-links">
