--- a/html/abbas.html
+++ b/html/abbas.html
@@ -25,7 +25,7 @@
             </section>
             <section class="logo">
               <ul >
-                <li style="list-style-type: none;"><img src="../img/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px;"></li>
+                <li style="list-style-type: none;"><img src="../img/home/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px;"></li>
               </ul>
             </section>
         </div>
