home design change

--- a/index.html
+++ b/index.html
@@ -1,76 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="main-header" id="main-bio">
-        <div class="container">
-            <section class="menu">
-                <nav class="nav-mine">
-                    <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="#about-me">About me</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
-                        <li><a href="#our-team">Our team</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
-            </section>
-            <section class="logo">
-                <ul>
-                    <li><img src="./img/home/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px"></li>
-                </ul>
-            </section>
+      <div class="container">
+        <section class="menu">
+          <nav class="nav-mine">
+            <ul>
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="#about-me">About me</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#our-team">Our team</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
+        </section>
+        <section class="logo">
+          <ul>
+            <li>
+              <img
+                src="./img/home/logo.svg"
+                style="
+                  width: 19rem;
+                  height: 14rem;
+                  float: left;
+                  margin-top: -5rem;
+                  text-align: left;
+                  border: 1px;
+                "
+              />
+            </li>
+          </ul>
+        </section>
+      </div>
+      <div class="small-text">
+        <span style="font-size: 30px" class="p-mana"> MANA TEAM </span>
+        <br />
+        <p class="text-about" style="text-align: justify; font-size: 25px">
+          Our website excels in creating stunning, highly functional sites,
+          crafted by a professional team using cutting-edge technologies. If
+          you’re seeking a unique and captivating online presence, look no
+          further. To meet the talented minds behind our exceptional work,
+          select one of the photos.
+        </p>
+      </div>
+      <!-- Slider Section -->
+      <div class="slider-container">
+        <div class="slider-wrapper">
+          <img
+            class="slider-image"
+            src="./img/abbas/abbas-kot.jpg"
+            alt="Slider Image"
+          />
+          <button class="prev">Prev</button>
+          <button class="next">Next</button>
         </div>
-        <div class="small-text">
-            <span style="font-size: 30px;" class="p-mana">MANA TEAM</span>
-            <br>
-            <p class="text-about" style="text-align: justify; font-size: 20px;">
-                Our website excels in creating stunning, highly functional sites, crafted by a professional team using cutting-edge technologies. If you’re seeking a unique and captivating online presence, look no further. To meet the talented minds behind our exceptional work, select one of the photos.
-            </p>
-        </div>
-        <!-- Slider Section -->
-        <div class="slider-container">
-            <div class="slider-wrapper">
-                <img class="slider-image" src="./img/abbas/abbas-kot.jpg" alt="Slider Image">
-                <button class="prev">Prev</button>
-                <button class="next">Next</button>
-            </div>
-        </div>
+      </div>
     </div>
     <section>
-    <footer>
-      <div class="footer-content">
-        <div class="logo-title">
-          <img src="./img/home/logo.svg" alt="logo">
-          <p>Building Web Wonders with MANA</p>
+      <footer>
+        <div class="footer-content">
+          <div class="logo-title">
+            <img src="./img/home/logo.svg" alt="logo" />
+            <p>Building Web Wonders with MANA</p>
+          </div>
+          <div class="social-links">
+            <a
+              href="https://www.linkedin.com/in/yourprofile"
+              target="_blank"
+              aria-label="LinkedIn"
+            >
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a
+              href="https://github.com/yourusername"
+              target="_blank"
+              aria-label="GitHub"
+            >
+              <i class="fab fa-github"></i>
+            </a>
+            <a
+              href="https://twitter.com/yourusername"
+              target="_blank"
+              aria-label="Twitter"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a
+              href="https://www.instagram.com/yourusername"
+              target="_blank"
+              aria-label="Instagram"
+            >
+              <i class="fab fa-instagram"></i>
+            </a>
+          </div>
         </div>
-        <div class="social-links">
-          <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="https://github.com/yourusername" target="_blank" aria-label="GitHub">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="https://twitter.com/yourusername" target="_blank" aria-label="Twitter">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://www.instagram.com/yourusername" target="_blank" aria-label="Instagram">
-            <i class="fab fa-instagram"></i>
-          </a>
+        <div class="copyright">
+          <p>&copy; 2024 Your Company MANA All rights reserved.</p>
         </div>
-      </div>
-      <div class="copyright">
-        <p>&copy; 2024 Your Company MANA All rights reserved.</p>
-      </div>
-    </footer>
+      </footer>
     </section>
     <script src="./js/app.js"></script>
-</body>
+  </body>
 </html>
