--- a/html/abbas.html
+++ b/html/abbas.html
@@ -36,14 +36,16 @@
         </div>
       </div> 
     </div>
-     <div style="clear:both; height:0.1px;">
-</div>
+    <div style="clear:both; height:0.1px;"></div>
     </header>
     <main>
-      <div class="test">
-      <h1>About Me</h1>
-      <p>My name is Abbas, I am 17 years old and during these past years I tried to be useful to the society and I am trying to be a good person. If you need help in the field of technology, I am at my service.</p>
-      </div>
+      <div class="main" id="about-me" >
+        <h1> About Me </h1>
+        <div class="right"  > 
+           <h2> My Name Is Abbas</h2>
+          <p> I am 17 years old and during these past years I tried to be useful to the society and I am trying to be a good person. If you need help in the field of technology, I am at my service</p>
+       </div>
+     </div>
       <section class="skils">
         <h2>skils</h2>
         <div class="skils-contenr">
