--- a/html/negin.html
+++ b/html/negin.html
@@ -24,26 +24,28 @@
                </nav>
             </section>
             <section class="logo">
-              <ul >
+              <ul>
                 <li style="list-style-type: none;"><img src="../img/home/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px;"></li>
               </ul>
             </section>
         </div>
         <div class="small-text">
           <p class="text-about"><b> Negin's Blog </b></p>
-          <p class="text-about"> Hello! I'm Negin, a web designer based in Gorgan. Welcome to my personal blog, where you'll get to know me better and gain the confidence to entrust your project to our team. </p>
+          <p class="text-about"> Hello! I'm Negin, a web designer based in Gorgan. <br> Welcome to my personal blog, where <br> you'll get to know me better and gain the confidence <br> to entrust your project to our team. </p>
           <a href="#about-me" class="link-page"> Read More...</a>
         </div>
       </div> 
-    </div>
-     <div style="clear:both; height:0.1px;">
-</div>
+      <div style="clear:both; height:0.1px;">
     </header>
     <main>
-      <div class="test">
-      <h1> About Me </h1>
-      <p> I’m Negin Sadani , a 25-year-old from Gorgan with a Bachelor’s degree in Computer Science from Semnan University. I have recently started learning web development with the LVT group and am eager to continue learning more.</p>
-      </div>
+      <div class="main" id="about-me" >
+        <h1> About Me </h1>
+        <br> 
+        <div class="right" > 
+           <p> I’m Negin Sadani , a 25-year-old from Gorgan with a Bachelor’s degree in Computer Science from Semnan University. I have recently started learning web development with the LVT group and am eager to continue learning more.</p>
+       </div>
+     </div>
+
       <section class="skils">
         <h2>skils</h2>
         <div class="skils-contenr">
