--- a/html/ali.html
+++ b/html/ali.html
@@ -8,23 +8,24 @@
   <title> Ali's Blog </title>
   </head>
   <body>
+     <header>
         <div class="main-header" id="main-bio">
           <div class="container">
               <section class="menu" >
                 <nav class="nav-mine">
                   <ul>
-                    <li> <a href="../index.html"> Home </a></li>
+                    <li><a href="../index.html"> Home </a></li>
                     <li><a href="#about-me"> About me </a></li>
                     <li><a href="#skills"> Skills </a></li>
                     <li><a href="#portfolio"> Portfolio </a></li>
                     <li><a href="#our-team"> Our team </a></li>
-                     <li><a href="#contact"> Contact </a></li>
+                    <li><a href="#contact"> Contact </a></li>
                   </ul>
                  </nav>
               </section>
               <section class="logo">
-                <ul >
-                  <li> <img src="../img/home/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px"></li>
+                <ul>
+                  <li style="list-style-type: none;"> <img src="../img/home/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px"></li>
                 </ul>
               </section>
           </div>
@@ -34,11 +35,12 @@
             <a href="#about-me" class="link-page"> Read More...</a>
           </div>
         </div> 
-      </div>
-       <div style="clear:both; height:0.1px;"></div>
-      <div class="main" id="about-me" ">
- <h1> About Me </h1>
-      <br> 
+      <div style="clear:both; height:0.1px;"></div>
+    </header>
+    <main>
+      <div class="main" id="about-me" >
+        <h1> About Me </h1>
+        <br> 
          <div class="left" > 
               <img src="../img/ali/img.jpg" class="image" alt="ali ahmadi" style="display: inline-block">
          </div>
@@ -175,5 +177,6 @@
           </div>
         </div>
       </footer>
+    </main>
   </body>
 </html>
