--- a/html/ali.html
+++ b/html/ali.html
@@ -46,7 +46,7 @@
          </div>
         <div class="right"  > 
            <h2> My Name Is Ali </h2>
-          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum </p>
+          <p> I am Ali Ahmadi, a senior network specialist with about eight years of experience in telecommunications equipment, network security, and web design. Recently, I joined the Mana team, where, together with my colleagues, we have the capability to design various types of personal, e-commerce, entertainment, and other website templates.</p>
        </div>
      </div>
 
