--- a/html/ali.html
+++ b/html/ali.html
@@ -98,19 +98,19 @@
         <div class="gallery-grid">
           <div class="gallery-item">
             <img src="../img/ali/b2.jpg" alt="afra-bot">
-            <p></p>
+            <p>news theme</p>
           </div>
           <div class="gallery-item">
-            <img src="../img/ali/b1.jpg" alt="abbas-code">
-            <p></p>
+            <img src="../img/ali/j.jpg" alt="abbas-code">
+            <p>blog theme</p>
         </div>
         <div class="gallery-item">
             <img src="../img/ali/s.jpg" alt="hacntosh">
-            <p>h</p>
+            <p>organization theme</p>
         </div>
         <div class="gallery-item">
             <img src="../img/ali/h.png" alt="nojavan">
-            <p></p>
+            <p>lovely site theme</p>
         </div>
       </section>
 </div>
@@ -124,7 +124,7 @@
 </div>
 
 <div class="box2">
-   <a href="./negin.html"><img src="../img/home/logo.png" alt="negin img"></a>
+   <a href="./negin.html"><img src="../img/negin/negin.jpg" alt="negin img"></a>
 </div>
 </div>
    </div>    
