chanes without back img

--- a/html/negin.html
+++ b/html/negin.html
@@ -2,47 +2,51 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style/negin.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="../style/ali.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title> Negin's Blog </title>
+  <title> Negin's Blog </title>
   </head>
   <body>
-    <header>
-      <div class="main-header" id="main-bio">
-        <div class="container">
-            <section class="menu" >
-              <nav class="nav-mine">
+     <header>
+        <div class="main-header" id="main-bio">
+          <div class="container">
+              <section class="menu" >
+                <nav class="nav-mine">
+                  <ul>
+                    <li><a href="../index.html"> Home </a></li>
+                    <li><a href="#about-me"> About me </a></li>
+                    <li><a href="#skills"> Skills </a></li>
+                    <li><a href="#portfolio"> Portfolio </a></li>
+                    <li><a href="#our-team"> Our team </a></li>
+                    <li><a href="#contact"> Contact </a></li>
+                  </ul>
+                 </nav>
+              </section>
+              <section class="logo">
                 <ul>
-                  <li><a href="../index.html"> Home </a></li>
-                  <li><a href="#about-me"> About me </a></li>
-                  <li><a href="#skills"> Skills </a></li>
-                  <li><a href="#portfolio"> Portfolio </a></li>
-                  <li><a href="#our-team"> Our team </a></li>
-                  <li><a href="#contact"> Contact </a></li>
+                  <li style="list-style-type: none;"> <img src="../img/home/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px"></li>
                 </ul>
-               </nav>
-            </section>
-            <section class="logo">
-              <ul>
-                <li style="list-style-type: none;"><img src="../img/home/logo.svg" style="width: 19rem; height: 14rem; float: left; margin-top: -5rem; text-align: left; border:1px;"></li>
-              </ul>
-            </section>
-        </div>
-        <div class="small-text">
-          <p class="text-about"><b> Negin's Blog </b></p>
-          <p class="text-about"> Hello! I'm Negin, a web designer based in Gorgan. <br> Welcome to my personal blog, where <br> you'll get to know me better and gain the confidence <br> to entrust your project to our team. </p>
-          <a href="#about-me" class="link-page"> Read More...</a>
-        </div>
-      </div> 
-      <div style="clear:both; height:0.1px;">
+              </section>
+          </div>
+          <div class="small-text">
+            <p class="text-about"> Negin's Blog </p>
+            <p class="text-about"> Hello! I'm Negin, a web designer based in Gorgan. <br> Welcome to my personal blog, where <br> you'll get to know me better and gain the confidence <br> to entrust your project to our team.
+            </p>
+            <a href="#about-me" class="link-page"> Read More...</a>
+          </div>
+        </div> 
+      <div style="clear:both; height:0.1px;"></div>
     </header>
     <main>
       <div class="main" id="about-me" >
         <h1> About Me </h1>
         <br> 
+         <div class="left" > 
+              <img src="../img/negin/NEGIN-2.JPG" class="image" alt="negin" style="display: inline-block">
+         </div>
         <div class="right"  > 
-          <p> I am Ali Ahmadi, a senior network specialist with about eight years of experience in telecommunications equipment, network security, and web design. Recently, I joined the Mana team, where, together with my colleagues, we have the capability to design various types of personal, e-commerce, entertainment, and other website templates.</p>
+          <p> I’m Negin Sadani, a 25 years'old from Gorgan with a Bachelor’s degree in Computer Science from Semnan University. I have recently started learning web development with the LVT group and am eager to continue learning more.</p>
        </div>
      </div>
 
@@ -93,20 +97,20 @@
       <section class="gallery">
         <div class="gallery-grid">
           <div class="gallery-item">
-            <img src="../img/ali/b2.jpg" alt="afra-bot">
-            <p></p>
+            <img src="../img/negin/ibolak.png" alt="shop">
+            <p> Store website </p>
           </div>
           <div class="gallery-item">
-            <img src="../img/ali/b1.jpg" alt="abbas-code">
-            <p></p>
+            <img src="../img/negin/infinity.png" alt="shopping">
+            <p> Store website </p>
         </div>
         <div class="gallery-item">
-            <img src="../img/ali/s.jpg" alt="hacntosh">
-            <p>h</p>
+            <img src="../img/negin/login.png" alt="login form">
+            <p> Login Form </p>
         </div>
         <div class="gallery-item">
-            <img src="../img/ali/h.png" alt="nojavan">
-            <p></p>
+            <img src="../img/negin/table.png" alt="table">
+            <p> Table </p>
         </div>
       </section>
 </div>
@@ -120,7 +124,7 @@
 </div>
 
 <div class="box2">
-   <a href="./negin.html"><img src="../img/home/logo.png" alt="negin img"></a>
+   <a href="./ali.html"><img src="../img/ali/img.jpg" alt="ali img"></a>
 </div>
 </div>
    </div>    
@@ -155,7 +159,7 @@
       <footer class="site-footer">
         <div class="footer-content">
           <div class="copyright">
-            <p>&copy; 2024 All Site Rights Are Reserved For <a href="ali.html"> Ali Ahmadi </a>.</p>
+            <p>&copy; 2024 All Site Rights Are Reserved For <a href="negin.html"> Negin Sadani </a>.</p>
           </div>
           <div class="social-links">
             <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
@@ -174,7 +178,5 @@
         </div>
       </footer>
     </main>
-  
-      
   </body>
 </html>
