--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
         <section class="menu">
           <nav class="nav-mine">
             <ul>
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="#about-me">About me</a></li>
-              <li><a href="#skills">Skills</a></li>
-              <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#our-team">Our team</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="./html/ali.html">Ali</a></li>
+              <li><a href="./html/abbas.html">Abbas</a></li>
+              <li><a href="./html/negin.html">Negin</a></li>
             </ul>
           </nav>
         </section>
@@ -44,9 +42,9 @@
         </section>
       </div>
       <div class="small-text">
-        <span style="font-size: 30px" class="p-mana"> MANA TEAM </span>
+        <span class="p-mana"> MANA TEAM </span>
         <br />
-        <p class="text-about" style="text-align: justify; font-size: 25px">
+        <p class="text-about">
           Our website excels in creating stunning, highly functional sites,
           crafted by a professional team using cutting-edge technologies. If
           you’re seeking a unique and captivating online presence, look no
@@ -106,7 +104,7 @@
           </div>
         </div>
         <div class="copyright">
-          <p>&copy; 2024 Your Company MANA All rights reserved.</p>
+          <p>&copy; 2024 All sites rights reserved for MANA TEAM</p>
         </div>
       </footer>
     </section>
