--- a/index.html
+++ b/index.html
@@ -52,18 +52,15 @@
           select one of the photos.
         </p>
       </div>
-      <!-- Slider Section -->
       <div class="slider-container">
         <div class="slider-wrapper">
-          <img
-            class="slider-image"
-            src="./img/abbas/abbas-kot.jpg"
-            alt="Slider Image"
-          />
-          <button class="prev">Prev</button>
-          <button class="next">Next</button>
+            <a href="#" class="slider-link">
+                <img class="slider-image" src="" alt="Slider Image">
+            </a>
+            <button class="prev">Prev</button>
+            <button class="next">Next</button>
         </div>
-      </div>
+    </div>
     </div>
     <section>
       <footer>
